# treeterm

./: .dockerignore  .gitignore  AGENTS.md  NIX_SETUP.md  README.md  electron.vite.config.ts  eslint.config.js  flake.nix  package-lock.json  package.json  plan.md  playwright.config.ts  tsconfig.daemon.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
.github/workflows/: ci.yml
daemon-rs/: Cargo.toml  flake.nix
daemon-rs/.cargo/: config.toml
daemon-rs/crates/treeterm-daemon/: Cargo.toml
daemon-rs/crates/treeterm-daemon/src/: connection_id.rs  exec_manager.rs  file_watcher.rs  filesystem.rs  grpc_server.rs  main.rs  paths.rs  pty_manager.rs  session_store.rs  socket_path.rs
daemon-rs/crates/treeterm-proto/: Cargo.toml  build.rs
daemon-rs/crates/treeterm-proto/src/: lib.rs
daemon-rs/tests/container/: Dockerfile  README.md  run-container-test.sh  verify-daemon-boot.sh
e2e/: daemon-lifecycle.spec.ts  helpers.ts  session-persistence.spec.ts  terminal-refresh.spec.ts  worktree-workflow.spec.ts
eslint-rules/: no-discarded-disposable.js  no-discarded-disposable.test.js  no-get-state-in-render.js  no-get-state-in-render.test.js  no-string-literal-comparison.js  no-string-literal-comparison.test.js  no-string-literal-union.js
eslint-rules/fixtures/: file.ts
scripts/: copy-chunk-minus-one.mjs
src/__mocks__/: electron.ts
src/applications/: index.ts
src/daemon/: execManager.test.ts  execManager.ts  filesystem.test.ts  filesystem.ts  git.ts  grpcServer.test.ts  grpcServer.ts  index.ts  logger.test.ts  logger.ts  protocol.test.ts  protocol.ts  (+7 more)
(+342 files in other folders)
