[workspace]
resolver = "2"
members = [
    "crates/treeterm-proto",
    "crates/treeterm-daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.13"
prost = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
rand = "0.9"
vt100 = "0.15"

[profile.release]
lto = true
codegen-units = 1
strip = true
