[package]
name = "treeterm-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "treeterm-daemon"
path = "src/main.rs"

[dependencies]
treeterm-proto = { path = "../treeterm-proto" }
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
libc.workspace = true
tokio-stream = "0.1"
rand.workspace = true
vt100.workspace = true

[dev-dependencies]
tempfile = "3"
